--- a/2024-01-24/index.html
+++ b/2024-01-24/index.html
@@ -98,13 +98,13 @@
 
 
 <h2 id="hello-world">hello, world</h2>
-<p>welcome to the file.photo blog</p>
+<p>welcome to the <a href="https://file.photo">file.photo</a> blog</p>
 <p>our goal is to build the best raw photo archival site for photographers of all levels of experience levels</p>
 <p>we think backups are important and saving every photo you ever take should be affordable</p>
 <h3 id="why-raw">why raw?</h3>
 <p>raw photos are the closest thing digital cameras can get to a film negative</p>
 <p>any JPG, PNG, GIF, or other image you generate from your raw files can always be rerendered or recreated as long as the raw still exists</p>
-<p>if you could archive every shot you ever took on your camera could:</p>
+<p>if you could archive every shot you ever took on your camera, you could:</p>
 <ul>
 <li>rerender images in the future with better photography software</li>
 <li>track your progress as a photographer by comparing old shots with new ones</li>
@@ -132,7 +132,7 @@
 <p>we think the safest backup strategy is a local duplicate (or two) and uploading to a cloud provider that stores multiple copies</p>
 <p>the sooner you get multiple copies of your raw photos, the less likely any device can be corrupted and lose them</p>
 <p>SD cards fail, hard drives die, servers suffer power issues, and laptops burn out</p>
-<p>that doesn't mean you should panic between when you're taking photos and when they're uploaded</p>
+<p>that doesn't mean you should panic during the time between when you're taking photos and when they're uploaded</p>
 <p>it does mean that prioritizing some sort of offsite backup is good if you want to build an archive</p>
 <h3 id="conclusion">conclusion</h3>
 <p>if you are like us and love the idea of building an archive of your work over time at a fair price please stay tuned</p>
