--- a/2024-01-24/index.html
+++ b/2024-01-24/index.html
@@ -99,12 +99,12 @@
 
 <h2 id="hello-world">hello, world</h2>
 <p>welcome to the <a href="https://file.photo">file.photo</a> blog</p>
-<p>our goal is to build the best raw photo archival site for photographers of all levels of experience levels</p>
-<p>we think backups are important and saving every photo you ever take should be affordable</p>
+<p>our goal is to build the best raw photo archival site for photographers of all experience levels</p>
+<p>we think backups are important and saving every photo you take should be affordable</p>
 <h3 id="why-raw">why raw?</h3>
-<p>raw photos are the closest thing digital cameras can get to a film negative</p>
+<p>raw photos are the digital camera equivalent of a film negative</p>
 <p>any JPG, PNG, GIF, or other image you generate from your raw files can always be rerendered or recreated as long as the raw still exists</p>
-<p>if you could archive every shot you ever took on your camera, you could:</p>
+<p>if you could archive every shot you ever took, you could:</p>
 <ul>
 <li>rerender images in the future with better photography software</li>
 <li>track your progress as a photographer by comparing old shots with new ones</li>
@@ -112,7 +112,7 @@
 <li>pass down photos that might be interesting to family or publications in the future</li>
 </ul>
 <h3 id="archival-options">archival options</h3>
-<p>some folks save only the pictures they want</p>
+<p>some folks only save the pictures they want</p>
 <p>some folks build or buy NAS (network attached storage) devices</p>
 <p>some folks use dropbox, apple, google, and other cloud storage providers</p>
 <p>and some folks mix those options together</p>
