--- a/2024-01-24/index.html
+++ b/2024-01-24/index.html
@@ -126,7 +126,7 @@
 <p>no cloud provider can quite give you that as they can't guarantee your internet connection speed</p>
 <p>to achieve that you really need a NAS or some sort of large local storage</p>
 <blockquote>
-<p>if you love the NAS idea, we recommend <a href="https://blog.file.photo/2024-01-24/truenas.com">truenas</a> with offsite backups to <a href="https://blog.file.photo/2024-01-24/backblaze.com">backblaze</a></p>
+<p>if you love the NAS idea, we recommend <a href="https://truenas.com">truenas</a> with offsite backups to <a href="https://backblaze.com">backblaze</a></p>
 </blockquote>
 <h3 id="safety">safety</h3>
 <p>we think the safest backup strategy is a local duplicate (or two) and uploading to a cloud provider that stores multiple copies</p>
