file.photo link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <main>
           
 <h1 id="blog-file-photo">blog.file.photo</h1>
-<p>welcome to the file.photo blog</p>
+<p>welcome to the <a href="https://file.photo">file.photo</a> blog</p>
 <p>this is the place to learn about</p>
 <ul>
 <li>pricing</li>
